<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_pid_controller</name>
  <version>0.0.0</version>
  <description>Hardware Interface for ODrive S1</description>
  <maintainer email="alexander@minor.pw">Alexander Minor</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
